infra/coder/acme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-challenge
  namespace: coder
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: coder.dreammakerhub.website
    http:
      paths:
      - path: /.well-known/acme-challenge/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cm-acme-http-solver
            port:
              number: 8089
